	- Added a silhouette portrait for Diamond Dogs.
	- Added alternate ideology flags for Ice Dragon Tribe.
	- Added a new non-aligned flag for Hippogriffia.
	- Added an event for Chiropterra if the Solar Empire forms.
	- Added an event image for generic movie propaganda event.
	- Added a generic portrait for harpies.
	- Added a new focus icon for River Games focus.

✢ Changes and fixes:
	- Fixed a dehumanized focus icon having the wrong size.
	- Fixed Princess Cadance's name being unlocalized.
	- Changed year of 1005 medium tank chassis to 1009.
	- Hopefully fixed Sköldsvärd not getting appropriate commander levels or traits.
	- Supremacy Flowena's Vivienne advisor no longer has a non-aligned popularity boosting trait.
	- Fixed Novaya Severyana advisors not working.
	- Fixed some concern icons for Flowena.
	- Fixed Angriver republican post-Griffenheim tree being broken.
	- Renamed a Hippogriff advisor and added a general role for them.
	- Fixed several issues with plane templates.
	- Chiropterra now hates Equestria.
	- Ahuizotl can no longer trade with Skyfall.
	- Crack Lightning now keeps some of Posada's national spirits if he becomes leader.
	- Fixed some crashes from advisors being added.
	- Fixed Westkeep not getting Aquileian medals.
	- "Empower Archons" focus now bypasses if supremacy Strawberry formed the Griffonian Empire.
	- Replaced army spirit icon for Ideological Loyalty.
	- Lushi will no longer get the Evi cosmetic tag if they already have the supremacy cosmetic tag.
	- Fixed Zebrica generic focus tree not checking for 5 research slots. 
	- Added back a Buffalo advisor that got lost during character conversion.
	- Fixed missing description for a Buffalo general.
	- Manehattan Protectorate now starts with Changeling Equipment Templates.
	- Fixed bad encoding in an OOB file causing a crash.
	- Fixed missing icon for Vesalipolis Queen's Tower state modifier.
	- Fixed cost for an advisor in Crystal Empire.