@@ -1815,6 +1815,63 @@ foreign_politics = {
 			
 		}
 	}
+	WNG_give_land_back_to_cats = {
+
+		icon = generic_nationalism
+		targets = { ABY }
+		targets_dynamic = yes
+		target_trigger = {
+			FROM = {
+				original_tag = ABY
+			}
+		}
+
+		allowed = {
+			original_tag = WNG
+		}
+
+		available = {
+			has_war = no
+			FROM = {
+				has_war = no
+			}
+			is_subject = no
+		}
+
+		target_root_trigger = {
+			is_subject = no
+		}
+
+		visible = {
+			OR = {
+				has_completed_focus = WNG_an_alliance_of_the_centre
+				has_completed_focus = WNG_give_way_to_the_left_ppw
+				has_completed_focus = WNG_a_victory_for_the_republicans
+				has_completed_focus = WNG_a_victory_for_the_unitary_socialists
+				has_completed_focus = WNG_the_socialists_take_power
+				has_completed_focus = WNG_the_communists_take_power
+			}
+			FROM = {
+				exists = yes
+				is_subject = no
+			}
+		}
+
+		fire_only_once = yes
+
+		cost = 0
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision WNG_give_land_back_to_cats target: [From.GetName]"
+			FROM = {
+				country_event = wingbardy.145
+			}
+		}
+
+		ai_will_do = {
+			factor = 100
+		}
+	}
 }
 
 WNG_royal_support_decision_cat = {
