@@ -4498,6 +4498,33 @@ country_event = {
 	}
 }
 
+country_event = {
+	id = wingbardy.145
+	title = wingbardy.145.t
+	desc = wingbardy.145.d
+	picture = GFX_event_griffon_diplomacy
+	is_triggered_only = yes
+
+	option = {
+		name = wingbardy.145.a
+		add_opinion_modifier = { target = FROM modifier = made_friends }
+		FROM = {
+			every_owned_state = {
+				limit = {
+					OR = {
+						is_core_of = ROOT
+						is_claimed_by = ROOT
+					}
+				}
+				transfer_state_to = ROOT
+			}
+		}
+		ai_chance = {
+			factor = 100
+		}
+	}
+}
+
 ##########################################
 ######		WINGBARDY FLAVOUR		######
 ##########################################
