@@ -1551,6 +1551,10 @@ wingbardy.703.a:0 "Because I believe mercy is as important as justice."
  wingbardy.144.t:0 "The Gattei Way"
  wingbardy.144.d:0 "The foundation of the AGWP has not been an easy affair. Due to the poor economic situation of the kingdom, the project was originally underfunded. The original chairgriffon put in charge of the operation quickly departed for fear he was set up for failure or worse. In his stead emerged Genrico Gattei. Gattei was known as a rather crafty industrialist in Taloncana. Some of his ventures were impacted but instead of abandoning them like some others when the AGWP was created, he embraced it and began to lobby the government over participation in it. After all within the government began to see the position as doomed to fail, it was awarded to Gattei.\n\nUnder Gattei's leadership, the company was reorganised more efficiently along less bureaucratic lines. However, the budget of the AGWP was still an issue. Gattei's answer to it was the Taloncana scheme. With much fanfare and press coverage, he announced that incredibly rich methane and oil deposits were found in Taloncana and that soon, Wingbardy would become oil-independent. This quickly rose confidence in the company and many rich Wingbardians and capitalists began to buy into it, providing the company with some much-needed cash.\n\nThe reality was a bit less fantastic. Oil deposits were indeed found but they were very poor compared to the methane reserves. What he did was using natural gas instead to boost the development of national industry in the region. The gas would be a cheaper and more functional substitute for the all-important coal imported at great expenses. As many of these industry belonged to Gattei's family or friends, he benefited highly from the move. This could have been one of the greatest scandal in Wingbardian history but the move ultimately lead to a boom in the region and the high profits were plowed back into the various branches of the AGWP, allowing to grow even more and strike actual oil deposits.\n\nFar from getting fired over the scheme, Gattei became a media darling and a powerful political actor. Some are calling him corrupt and the move a threat to our government's integrity. Gattei prefers to call himself 'innovative'."
  wingbardy.144.a:0 "Wingbardy does need some innovation..."
+ 
+ wingbardy.145.t:0 "Wingbardian Decolonisation"
+ wingbardy.145.d:0 "Recently, the government of Wingbardy changed due to political instability, and it seems like the new government led by [From.GetLeader] has little interest in continuing aggressive colonial policies aimed at Abyssinia. In fact, they have offered to return all land that was previously taken from us through various means, rendering previous unequal treaties null and void. Their colonial troops are already vacating former Abyssinian territory, and the Ras of Purrsia is on his own, meaning he'll have to become an Abyssinian subject once again."
+ wingbardy.145.a:0 "Perhaps we can be friends after all..."
 
 #Gumberto events
  wingbardy_gumberto.1.t:0 "The Heir Apparent"
@@ -2319,6 +2323,9 @@ wingbardy.703.a:0 "Because I believe mercy is as important as justice."
  WNG_support_EMR:0 "Support [EMR.GetNameDef]"
  WNG_send_arms_to_arabia:0 "Send Arms to [FROM.GetNameDef]"
  WNG_send_advisors_to_arabia:0 "Send Advisors to [FROM.GetNameDef]"
+ 
+ WNG_give_land_back_to_cats:0 "Return Land To Abyssinia"
+ WNG_give_land_back_to_cats_desc:0 "Previous governments have pursued a policy of colonialism and imperialism in Abyssinia, mainly to enrich every griffon involved. Our new government has little interest in pursuing overseas interests, so we might as well make amends with Abyssinia and give them back what's rightfully theirs."
 
  ### TOOLTIPS ###
  WNG_form_workers_empire_unlocked_tt:0 "Unlocks the ability to form the §YWorker's Empire§! giving you cores on the §YSouthern Realms§!.\n"
