@@ -45,7 +45,7 @@
  EAW_WS_TAB_4_TXT_HEADER_5:0 "§Y'In the Shadow of Mountains' 1.8.0.1§!"
  #EAW_WS_TAB_4_TXT_HEADER_6:0 "§Y'In the Shadow of Mountains' 1.8§!"
  #EAW_WS_TAB_4_TXT_HEADER_7:0 "§Y'Pax Chrysalia: Redux' 1.7.7.1§!"
- EAW_WS_TAB_4_TXT:0 "\n\n+ Additions:\n    - Reworked portrait for Colette Solide in Westkeep.\n    - Added a silhouette portrait for Diamond Dogs.\n    - Added alternate ideology flags for Ice Dragon Tribe.\n    - Added a new non-aligned flag for Hippogriffia.\n    - Added an event for Chiropterra if the Solar Empire forms.\n    - Added an event image for generic movie propaganda event.\n    - Added a generic portrait for harpies.\n    - Added a new focus icon for River Games focus.\n+ Changes and fixes:\n    - Fixed a dehumanized focus icon having the wrong size.\n    - Fixed Princess Cadance's name being unlocalized.\n    - Changed year of 1005 medium tank chassis to 1009.\n    - Hopefully fixed Sköldsvärd not getting appropriate commander levels or traits.\n    - Supremacy Flowena's Vivienne advisor no longer has a non-aligned popularity boosting trait.\n    - Fixed Novaya Severyana advisors not working.\n    - Fixed some concern icons for Flowena.\n    - Fixed Angriver republican post-Griffenheim tree being broken.\n    - Renamed a Hippogriff advisor and added a general role for them.\n    - Fixed several issues with plane templates.\n    - Chiropterra now hates Equestria.\n    - Ahuizotl can no longer trade with Skyfall.\n    - Crack Lightning now keeps some of Posada's national spirits if he becomes leader.\n    - Fixed some crashes from advisors being added.\n    - Fixed Westkeep not getting Aquileian medals.\n    - "Empower Archons" focus now bypasses if supremacy Strawberry formed the Griffonian Empire.\n    - Replaced army spirit icon for Ideological Loyalty.\n    - Lushi will no longer get the Evi cosmetic tag if they already have the supremacy cosmetic tag.\n    - Fixed Zebrica generic focus tree not checking for 5 research slots. \n    - Added back a Buffalo advisor that got lost during character conversion.\n    - Fixed missing description for a Buffalo general.\n    - Manehattan Protectorate now starts with Changeling Equipment Templates.\n    - Fixed bad encoding in an OOB file causing a crash.\n    - Fixed missing icon for Vesalipolis Queen's Tower state modifier.\n    - Fixed cost for an advisor in Crystal Empire.\n    - Fixed several inconsistencies with Crystal Empire and Polar Bear advisor icons.\n    - Fixed a missing advisor icon in Tarrin.\n    - Fixed Stalliongrad truck technology icon.\n    - Prywhen can now get a fifth research slot.\n    - Fixed King Kloseu advisor not being removed in Brodfeld if he dies.\n    - Fixed Zumidia's starting air technology.\n    - Countries can no longer see designers of other countries at start.\n    - Fixed some country leader checks.\n    - Fixed a province in Angriver missing the forest province modifier.\n    - Fixed conditions for Gryphia's concerns.\n    - Fixed icon for New California Republic's spy advisor.\n    - Standardized Chrysalis-Nightmare Moon marriage to use similar checks as Sinister-Sombra marriage.\n    - Fixed edgecase where Sombra can marry both Sinister and Radiant.\n    - Swapped some hippogriff advisor icons.\n    - Cyanolisia and Sicameon advisors now have generic icons.\n    - Fixed Watertowns' Holy Springs national spirit availability for countries that form the River Federation.\n    - Fixed Sunstriker Clan focuses not having tooltips for unlocking concerns.\n    - Fixed Puerto Caballo concerns checking for focuses that don't exist for now.\n    - Fixed missing trait for a Tobuck concern.\n    - Removed generic concerns from some countries that shouldn't have them.\n    - Our Town now gets access to some of Stalliongrad's concerns.\n    - Film propaganda decision now requires electronic-mechanical engineering technology.\n    - Miscellaneous bugfixes and improvements.\n    - Miscellaneous localisation fixes."
+ EAW_WS_TAB_4_TXT:0 "\n\n+ Additions:\n    - Reworked portrait for Colette Solide in Westkeep.\n    - Added a silhouette portrait for Diamond Dogs.\n    - Added alternate ideology flags for Ice Dragon Tribe.\n    - Added a new non-aligned flag for Hippogriffia.\n    - Added an event for Chiropterra if the Solar Empire forms.\n    - Added an event image for generic movie propaganda event.\n    - Added a generic portrait for harpies.\n    - Added a new focus icon for River Games focus.\n    - Added a decision for Wingbardy to give land back to Abyssinia.\n+ Changes and fixes:\n    - Fixed a dehumanized focus icon having the wrong size.\n    - Fixed Princess Cadance's name being unlocalized.\n    - Changed year of 1005 medium tank chassis to 1009.\n    - Hopefully fixed Sköldsvärd not getting appropriate commander levels or traits.\n    - Supremacy Flowena's Vivienne advisor no longer has a non-aligned popularity boosting trait.\n    - Fixed Novaya Severyana advisors not working.\n    - Fixed some concern icons for Flowena.\n    - Fixed Angriver republican post-Griffenheim tree being broken.\n    - Renamed a Hippogriff advisor and added a general role for them.\n    - Fixed several issues with plane templates.\n    - Chiropterra now hates Equestria.\n    - Ahuizotl can no longer trade with Skyfall.\n    - Crack Lightning now keeps some of Posada's national spirits if he becomes leader.\n    - Fixed some crashes from advisors being added.\n    - Fixed Westkeep not getting Aquileian medals.\n    - "Empower Archons" focus now bypasses if supremacy Strawberry formed the Griffonian Empire.\n    - Replaced army spirit icon for Ideological Loyalty.\n    - Lushi will no longer get the Evi cosmetic tag if they already have the supremacy cosmetic tag.\n    - Fixed Zebrica generic focus tree not checking for 5 research slots. \n    - Added back a Buffalo advisor that got lost during character conversion.\n    - Fixed missing description for a Buffalo general.\n    - Manehattan Protectorate now starts with Changeling Equipment Templates.\n    - Fixed bad encoding in an OOB file causing a crash.\n    - Fixed missing icon for Vesalipolis Queen's Tower state modifier.\n    - Fixed cost for an advisor in Crystal Empire.\n    - Fixed several inconsistencies with Crystal Empire and Polar Bear advisor icons.\n    - Fixed a missing advisor icon in Tarrin.\n    - Fixed Stalliongrad truck technology icon.\n    - Prywhen can now get a fifth research slot.\n    - Fixed King Kloseu advisor not being removed in Brodfeld if he dies.\n    - Fixed Zumidia's starting air technology.\n    - Countries can no longer see designers of other countries at start.\n    - Fixed some country leader checks.\n    - Fixed a province in Angriver missing the forest province modifier.\n    - Fixed conditions for Gryphia's concerns.\n    - Fixed icon for New California Republic's spy advisor.\n    - Standardized Chrysalis-Nightmare Moon marriage to use similar checks as Sinister-Sombra marriage.\n    - Fixed edgecase where Sombra can marry both Sinister and Radiant.\n    - Swapped some hippogriff advisor icons.\n    - Cyanolisia and Sicameon advisors now have generic icons.\n    - Fixed Watertowns' Holy Springs national spirit availability for countries that form the River Federation.\n    - Fixed Sunstriker Clan focuses not having tooltips for unlocking concerns.\n    - Fixed Puerto Caballo concerns checking for focuses that don't exist for now.\n    - Fixed missing trait for a Tobuck concern.\n    - Removed generic concerns from some countries that shouldn't have them.\n    - Our Town now gets access to some of Stalliongrad's concerns.\n    - Film propaganda decision now requires electronic-mechanical engineering technology.\n    - Miscellaneous bugfixes and improvements.\n    - Miscellaneous localisation fixes."
  
  # Continent
  EAW_WS_Zebrica:0 "Zebrica - Crossroad of Civilizations"
