@@ -8,6 +8,7 @@
 	- Added an event image for generic movie propaganda event.
 	- Added a generic portrait for harpies.
 	- Added a new focus icon for River Games focus.
+	- Added a decision for Wingbardy to give land back to Abyssinia.
 
 ✢ Changes and fixes:
 	- Fixed a dehumanized focus icon having the wrong size.
